greenhouse-01. Added change in docker files

--- a/greenhouse_app/docker-compose.yml
+++ b/greenhouse_app/docker-compose.yml
@@ -3,7 +3,7 @@
 services:
 
     mongo:
-        image: mongo
+        image: arm7/mongo
         restart: always
         ports:
             - 27017:27017
