--- a/greenhouse_app/greenhouse_app.csproj
+++ b/greenhouse_app/greenhouse_app.csproj
@@ -25,6 +25,8 @@
     <None Remove="MongoDB.Driver" />
     <None Remove="MongoDB.Driver.Core" />
     <None Remove="Extensions\" />
+    <None Remove="Newtonsoft.Json" />
+    <None Remove="System.IO" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="6.0.0" />
@@ -33,6 +35,8 @@
     <PackageReference Include="MongoDB.Bson" Version="2.14.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.14.1" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.14.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.IO" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
@@ -44,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="ProgramExample.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
