greenhouse-01. Added MediatoR library

--- a/greenhouse_app/greenhouse_app.csproj
+++ b/greenhouse_app/greenhouse_app.csproj
@@ -28,6 +28,8 @@
     <None Remove="Newtonsoft.Json" />
     <None Remove="System.IO" />
     <None Remove="Data\DTOs\" />
+    <None Remove="MediatR.Extensions.Microsoft.DependencyInjection" />
+    <None Remove="MediatR" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.14.1" />
@@ -38,6 +40,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.IO" Version="4.3.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
