--- a/greenhouse_app/greenhouse_app.csproj
+++ b/greenhouse_app/greenhouse_app.csproj
@@ -30,6 +30,7 @@
     <None Remove="Data\DTOs\" />
     <None Remove="MediatR.Extensions.Microsoft.DependencyInjection" />
     <None Remove="MediatR" />
+    <None Remove="Scrutor" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.14.1" />
@@ -42,6 +43,7 @@
     <PackageReference Include="System.IO" Version="4.3.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Scrutor" Version="4.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Interfaces\" />
