--- a/greenhouse_app/greenhouse_app.csproj
+++ b/greenhouse_app/greenhouse_app.csproj
@@ -31,6 +31,7 @@
     <None Remove="MediatR.Extensions.Microsoft.DependencyInjection" />
     <None Remove="MediatR" />
     <None Remove="Scrutor" />
+    <None Remove="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.14.1" />
@@ -53,6 +54,7 @@
     <Folder Include="Data\Models\" />
     <Folder Include="Extensions\" />
     <Folder Include="Data\DTOs\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
